# Flutter_Dashboard

./: CMakeLists.txt  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
bundle/: flutter_dashboard
bundle/data/flutter_assets/: AssetManifest.json  NOTICES.Z
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/components/: album_cover.dart  alerts.dart  arc_painter.dart  battery.dart  car_info.dart  clock.dart  gears.dart  indicator.dart  media_info.dart  power.dart  sonar_view.dart  speedometer.dart  volt_current.dart
lib/ffi/: CMakeLists.txt  CarControlProxy.cpp  CarInfoProxy.cpp  ParkDistanceControlProxy.cpp  SpeedSensorProxy.cpp  commonapi.cpp
lib/ffi/fidl/: CarInfo.fdepl  CarInfo.fidl  HeadUnit.fidl
lib/ffi/src/: CanTransceiverProxy.cpp  CarControlProxy.cpp  CarInfoProxy.cpp  HeadUnitProxy.cpp  ParkDistanceControlProxy.cpp  SpeedSensorProxy.cpp  commonapi.cpp
lib/ffi/src-gen/core/v0/commonapi/: CarInfo.hpp  CarInfoProxyBase.hpp  CarInfoStub.hpp  CarInfoStubDefault.hpp
lib/ffi/src-gen/someip/v0/commonapi/: HeadUnitSomeIPDeployment.hpp
lib/providers/: alert_provider.dart  car_info_provider.dart  commonAPI.dart  control_provider.dart  media_provider.dart  sonar_provider.dart  speed_provider.dart  theme_provider.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
windows/: CMakeLists.txt
windows/runner/: Runner.rc
